integracion de bootstrap

--- a/html/empresa.html
+++ b/html/empresa.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Cycwin</title>
 </head>
 
 <body>
     <header>
         <a href="">
-            <img class="logo" src="../img/logo_blanco.png" alt="logo">
+            <img class="logo" src="../img/logo_blanco.png" alt="logo" />
         </a>
         <nav>
             <ul>
@@ -26,76 +26,81 @@
     </header>
     <main>
         <h1>Nuestra empresa</h1>
-        <h2>¿Quiénes somos? </h2>
+        <h2>¿Quiénes somos?</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nulla harum, optio quaerat ullam mollitia
-            id atque, facere pariatur vel, est dignissimos dolores hic porro labore perferendis et. Modi, fugit!
-            Nihil praesentium accusantium incidunt nobis, qui pariatur itaque ipsum ut! Aperiam adipisci recusandae
-            vitae totam necessitatibus explicabo facilis ad odio, illum, impedit cum. Porro reiciendis voluptas
-            doloremque corrupti, inventore dicta!
-            Excepturi aut, labore cumque aperiam libero fugit, culpa repellat, perspiciatis tenetur asperiores sint
-            repudiandae eveniet eaque maxime omnis iste ut! Quae quidem eligendi illo culpa numquam nam ducimus. At,
-            ullam?
-            Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae eum commodi odio eos, labore non perferendis
-            sed illo corrupti quo aut ex quae suscipit quos sapiente nisi architecto similique fuga.
-            Amet omnis libero incidunt ad totam sit porro atque. Iure ea recusandae, dolor qui natus excepturi eum nisi
-            fuga nesciunt labore corrupti accusantium perspiciatis, illo unde, facilis illum ipsa ipsam.
-            Aperiam dicta unde esse in sapiente ducimus eaque laboriosam labore inventore. Doloribus dolorem architecto
-            magnam inventore ad, dignissimos illo nobis optio numquam expedita ipsa? Nesciunt eligendi facere fugiat
-            odit mollitia.</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nulla
+            harum, optio quaerat ullam mollitia id atque, facere pariatur vel, est
+            dignissimos dolores hic porro labore perferendis et. Modi, fugit! Nihil
+            praesentium accusantium incidunt nobis, qui pariatur itaque ipsum ut!
+            Aperiam adipisci recusandae vitae totam necessitatibus explicabo facilis
+            ad odio, illum, impedit cum. Porro reiciendis voluptas doloremque
+            corrupti, inventore dicta! Excepturi aut, labore cumque aperiam libero
+            fugit, culpa repellat, perspiciatis tenetur asperiores sint repudiandae
+            eveniet eaque maxime omnis iste ut! Quae quidem eligendi illo culpa
+            numquam nam ducimus. At, ullam? Recusandae, harum! Ea fugit nemo
+            suscipit! Cumque magni vitae eum commodi odio eos, labore non
+            perferendis sed illo corrupti quo aut ex quae suscipit quos sapiente
+            nisi architecto similique fuga. Amet omnis libero incidunt ad totam sit
+            porro atque. Iure ea recusandae, dolor qui natus excepturi eum nisi fuga
+            nesciunt labore corrupti accusantium perspiciatis, illo unde, facilis
+            illum ipsa ipsam. Aperiam dicta unde esse in sapiente ducimus eaque
+            laboriosam labore inventore. Doloribus dolorem architecto magnam
+            inventore ad, dignissimos illo nobis optio numquam expedita ipsa?
+            Nesciunt eligendi facere fugiat odit mollitia.
+        </p>
         <div class="quienesSomos">
-            <img class="logo" src="../img/logo_negro.png" alt="logo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nulla harum, optio quaerat ullam
-                mollitia
-                id atque, facere pariatur vel, est dignissimos dolores hic porro labore perferendis et. Modi, fugit!
-                Nihil praesentium accusantium incidunt nobis, qui pariatur itaque ipsum ut! Aperiam adipisci recusandae
-                vitae totam necessitatibus explicabo facilis ad odio, illum, impedit cum. Porro reiciendis voluptas
-                doloremque corrupti, inventore dicta!
-                Excepturi aut, labore cumque aperiam libero fugit, culpa repellat, perspiciatis tenetur asperiores sint
-                repudiandae eveniet eaque maxime omnis iste ut! Quae quidem eligendi illo culpa numquam nam ducimus. At,
-                ullam?
-                Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae eum commodi odio eos, labore non
-                perferendis
-                sed illo corrupti quo aut ex quae suscipit quos sapiente nisi architecto similique fuga.
-                Amet omnis libero incidunt ad totam sit porro atque. Iure ea recusandae, dolor qui natus excepturi eum
-                nisi
-                fuga nesciunt labore corrupti accusantium perspiciatis, illo unde, facilis illum ipsa ipsam.
-                Aperiam dicta unde esse in sapiente ducimus eaque laboriosam labore inventore. Doloribus dolorem
-                architecto
-                magnam inventore ad, dignissimos illo nobis optio numquam expedita ipsa? Nesciunt eligendi facere fugiat
-                odit mollitia.Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae eum commodi odio eos, labore
-                non
-                perferendis
-                sed illo corrupti quo aut ex quae suscipit quos sapiente nisi architecto similique fuga.
-                Amet omnis libero incidunt ad totam sit porro atque. Iure ea recusandae, dolor qui natus excepturi eum
-                nisi
-                fuga nesciunt labore corrupti accusantium perspiciatis, illo unde, facilis illum ipsa ipsam.
-                Aperiam dicta unde esse in sapiente ducimus eaque laboriosam labore inventore. Doloribus dolorem
-                architecto
-                magnam inventore ad, dignissimos illo nobis optio numquam expedita ipsa? Nesciunt eligendi facere fugiat
-                odit mollitia.Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae eum commodi odio eos, labore
-                non
+            <img class="logo" src="../img/logo_negro.png" alt="logo" />
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+                nulla harum, optio quaerat ullam mollitia id atque, facere pariatur
+                vel, est dignissimos dolores hic porro labore perferendis et. Modi,
+                fugit! Nihil praesentium accusantium incidunt nobis, qui pariatur
+                itaque ipsum ut! Aperiam adipisci recusandae vitae totam
+                necessitatibus explicabo facilis ad odio, illum, impedit cum. Porro
+                reiciendis voluptas doloremque corrupti, inventore dicta! Excepturi
+                aut, labore cumque aperiam libero fugit, culpa repellat, perspiciatis
+                tenetur asperiores sint repudiandae eveniet eaque maxime omnis iste
+                ut! Quae quidem eligendi illo culpa numquam nam ducimus. At, ullam?
+                Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae eum
+                commodi odio eos, labore non perferendis sed illo corrupti quo aut ex
+                quae suscipit quos sapiente nisi architecto similique fuga. Amet omnis
+                libero incidunt ad totam sit porro atque. Iure ea recusandae, dolor
+                qui natus excepturi eum nisi fuga nesciunt labore corrupti accusantium
+                perspiciatis, illo unde, facilis illum ipsa ipsam. Aperiam dicta unde
+                esse in sapiente ducimus eaque laboriosam labore inventore. Doloribus
+                dolorem architecto magnam inventore ad, dignissimos illo nobis optio
+                numquam expedita ipsa? Nesciunt eligendi facere fugiat odit
+                mollitia.Recusandae, harum! Ea fugit nemo suscipit! Cumque magni vitae
+                eum commodi odio eos, labore non perferendis sed illo corrupti quo aut
+                ex quae suscipit quos sapiente nisi architecto similique fuga. Amet
+                omnis libero incidunt ad totam sit porro atque. Iure ea recusandae,
+                dolor qui natus excepturi eum nisi fuga nesciunt labore corrupti
+                accusantium perspiciatis, illo unde, facilis illum ipsa ipsam. Aperiam
+                dicta unde esse in sapiente ducimus eaque laboriosam labore inventore.
+                Doloribus dolorem architecto magnam inventore ad, dignissimos illo
+                nobis optio numquam expedita ipsa? Nesciunt eligendi facere fugiat
+                odit mollitia.Recusandae, harum! Ea fugit nemo suscipit! Cumque magni
+                vitae eum commodi odio eos, labore non
             </p>
-
         </div>
         <h2>¿Dónde nos ubicamos?</h2>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11411.323197002108!2d-71.59400381177026!3d-33.61634077550398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1691189268270!5m2!1ses!2scl"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-
     </main>
-
-
 
     <footer>
         <ul>
-            <li><a class="links" href="https://www.instagram.com/">Instagram</a></li>
+            <li>
+                <a class="links" href="https://www.instagram.com/">Instagram</a>
+            </li>
             <li><a class="links" href="https://twitter.com/">X</a></li>
             <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
             <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
         </ul>
-        <h3> © Cycwin 2023 - todos los derechos reservados</h3>
+        <h3>© Cycwin 2023 - todos los derechos reservados</h3>
     </footer>
 </body>
 
