--- a/html/contacto.html
+++ b/html/contacto.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Cycwin</title>
 </head>
 
 <body>
     <header>
         <a href="">
-            <img class="logo" src="../img/logo_blanco.png" alt="logo">
+            <img class="logo" src="../img/logo_blanco.png" alt="logo" />
         </a>
         <nav>
             <ul>
@@ -29,33 +29,33 @@
         <h2>Formulario de contacto</h2>
         <form action="">
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre">
+            <input type="text" id="nombre" />
 
             <label for="apellido">Apellido</label>
-            <input type="text" id="apellido">
+            <input type="text" id="apellido" />
 
-            <Label for="correo">Correo Electrínico</Label>
-            <input type="text" id="correo">
+            <label for="correo">Correo Electrínico</label>
+            <input type="text" id="correo" />
 
             <label for="mensaje">Mensaje</label>
             <textarea name="" id="mensaje" cols="30" rows="10"
                 placeholder="Escriba aquí qué tipo de ventana necesita"></textarea>
 
-            <input class="btnFormulario" type="submit" value="Pedir Cotización">
-            <input class="btnFormulario" type="reset">
+            <input class="btnFormulario" type="submit" value="Pedir Cotización" />
+            <input class="btnFormulario" type="reset" />
         </form>
     </main>
 
-
-
     <footer>
         <ul>
-            <li><a class="links" href="https://www.instagram.com/">Instagram</a></li>
+            <li>
+                <a class="links" href="https://www.instagram.com/">Instagram</a>
+            </li>
             <li><a class="links" href="https://twitter.com/">X</a></li>
             <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
             <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
         </ul>
-        <h3> © Cycwin 2023 - todos los derechos reservados</h3>
+        <h3>© Cycwin 2023 - todos los derechos reservados</h3>
     </footer>
 </body>
 
