--- a/html/productos.html
+++ b/html/productos.html
@@ -2,79 +2,115 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Cycwin</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../css/style.css" />
+  <title>Cycwin</title>
 </head>
 
 <body>
-    <header>
-        <a href="">
-            <img class="logo" src="../img/logo_blanco.png" alt="logo">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="empresa.html">Quiénes somos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Productos</h1>
-        <div class="contenedor">
-            <div class="contenedorProductos">
+  <header>
+    <a href="">
+      <img class="logo" src="../img/logo_blanco.png" alt="logo" />
+    </a>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="productos.html">Productos</a></li>
+        <li><a href="proyectos.html">Proyectos</a></li>
+        <li><a href="empresa.html">Quiénes somos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
 
-                <img class="imgProducto" src="../img/ventana.jpg" alt="foto de ventana">
-                <h3>Ventanas termoacústicas</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quaerat odit veniam? Voluptatem
-                    architecto
-                    possimus nihil, et alias earum, eius quidem doloremque, quaerat placeat in beatae dignissimos animi
-                    perferendis accusantium</p>
-                <input class="btnCotizar" type="reset" value="Cotizar">
-            </div>
-            <div class="contenedorProductos">
-                <img class="imgProducto" src="../img/persiana.jpg" alt="foto de persiana">
-                <h3>Persiana Metálica</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quaerat odit veniam? Voluptatem
-                    architecto
-                    possimus nihil, et alias earum, eius quidem doloremque, quaerat placeat in beatae dignissimos animi
-                    perferendis accusantium</p>
-                <input class="btnCotizar" type="reset" value="Cotizar">
-            </div>
-            <div class="contenedorProductos">
-                <img class="imgProducto" src="../img/puerta.jpg" alt="foto de puerta">
-                <h3>Cierres, barandas y showerdoor</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quaerat odit veniam? Voluptatem
-                    architecto
-                    possimus nihil, et alias earum, eius quidem doloremque, quaerat placeat in beatae dignissimos animi
-                    perferendis accusantium!</p>
-                <input class="btnCotizar" type="reset" value="Cotizar">
-            </div>
-            <div class="contenedorProductos">
-                <img class="imgProducto" src="../img/bisagra.jpg" alt="foto de puerta">
-                <h3>Cierres, barandas y showerdoor</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quaerat odit veniam? Voluptatem
-                    architecto
-                    possimus nihil, et alias earum, eius quidem doloremque, quaerat placeat in beatae dignissimos animi
-                    perferendis accusantium!</p>
-                <input class="btnCotizar" type="reset" value="Cotizar">
-            </div>
-        </div>
-    </main>
-    <footer>
-        <ul>
-            <li><a class="links" href="https://www.instagram.com/">Instagram</a></li>
-            <li><a class="links" href="https://twitter.com/">X</a></li>
-            <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
-            <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
-        </ul>
-        <h3> © Cycwin 2023 - todos los derechos reservados</h3>
-    </footer>
+    <div class="card text-center mb-3" style="width: 18rem;">
+      <img class="card-img-top" src="../img/ventana.jpg" alt="foto de ventana" />
+      <div class="card-body">
+        <h5 class="card-title">Ventanas termoacústicas</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-primary">Cotizar</a>
+      </div>
+    </div>
+
+
+    <h1>Productos</h1>
+
+    <div class="contenedor">
+      <div class="contenedorProductos">
+        <img class="imgProducto" src="../img/ventana.jpg" alt="foto de ventana" />
+        <h3>Ventanas termoacústicas</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+          quaerat odit veniam? Voluptatem architecto possimus nihil, et alias
+          earum, eius quidem doloremque, quaerat placeat in beatae dignissimos
+          animi perferendis accusantium
+        </p>
+        <input class="btnCotizar" type="reset" value="Cotizar" />
+      </div>
+      <div class="contenedorProductos">
+        <img class="imgProducto" src="../img/persiana.jpg" alt="foto de persiana" />
+        <h3>Persiana Metálica</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+          quaerat odit veniam? Voluptatem architecto possimus nihil, et alias
+          earum, eius quidem doloremque, quaerat placeat in beatae dignissimos
+          animi perferendis accusantium
+        </p>
+        <input class="btnCotizar" type="reset" value="Cotizar" />
+      </div>
+      <div class="contenedorProductos">
+        <img class="imgProducto" src="../img/puerta.jpg" alt="foto de puerta" />
+        <h3>Cierres, barandas y showerdoor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+          quaerat odit veniam? Voluptatem architecto possimus nihil, et alias
+          earum, eius quidem doloremque, quaerat placeat in beatae dignissimos
+          animi perferendis accusantium!
+        </p>
+        <input class="btnCotizar" type="reset" value="Cotizar" />
+      </div>
+      <div class="contenedorProductos">
+        <img class="imgProducto" src="../img/bisagra.jpg" alt="foto de puerta" />
+        <h3>Cierres, barandas y showerdoor</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
+          quaerat odit veniam? Voluptatem architecto possimus nihil, et alias
+          earum, eius quidem doloremque, quaerat placeat in beatae dignissimos
+          animi perferendis accusantium!
+        </p>
+        <input class="btnCotizar" type="reset" value="Cotizar" />
+      </div>
+    </div>
+
+
+  </main>
+  <footer>
+    <ul>
+      <li>
+        <a class="links" href="https://www.instagram.com/">Instagram</a>
+      </li>
+      <li><a class="links" href="https://twitter.com/">X</a></li>
+      <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
+      <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
+    </ul>
+    <h3>© Cycwin 2023 - todos los derechos reservados</h3>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
