--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -1,88 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Cycwin</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href="">
-            <img class="logo" src="../img/logo_blanco.png" alt="logo">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="proyectos.html">Proyectos</a></li>
-                <li><a href="empresa.html">Quiénes somos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+      <a href="">
+        <img class="logo" src="../img/logo_blanco.png" alt="logo" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="proyectos.html">Proyectos</a></li>
+          <li><a href="empresa.html">Quiénes somos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h1>Proyectos Realizados</h1>
-        <main>
-            <div class="contenedorProyectos">
-                <div class="proyecto">
-                    <img class="imgProyecto" src="../img/proyecto1.jpg" alt="foto de ventana">
-                    <div class="textoProyecto">
-                        <h3>Proyecto 1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dignissimos voluptatibus
-                            veritatis
-                            saepe excepturi eum molestiae qui consequatur omnis. Nam eaque officia repellat iste
-                            doloribus
-                            beatae labore, maiores a quo.</p>
-                        <a class="btnCotizar" href="">Ver más</a>
-                    </div>
-                </div>
-                <div class="proyecto">
-                    <img class="imgProyecto" src="../img/proyecto2.jpg" alt="foto de persiana">
-                    <div class="textoProyecto">
-                        <h3>Proyecto 2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dignissimos voluptatibus
-                            veritatis
-                            saepe excepturi eum molestiae qui consequatur omnis. Nam eaque officia repellat iste
-                            doloribus
-                            beatae labore, maiores a quo.</p>
-                        <a class="btnCotizar" href="">Ver más</a>
-                    </div>
-                </div>
-                <div class="proyecto">
-
-                    <img class="imgProyecto" src="../img/proyecto3.jpg" alt="foto de puerta">
-                    <div class="textoProyecto">
-                        <h3>Proyecto 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis dignissimos voluptatibus
-                            veritatis
-                            saepe excepturi eum molestiae qui consequatur omnis. Nam eaque officia repellat iste
-                            doloribus
-                            beatae labore, maiores a quo.</p>
-
-                        <!-- <input class="btnCotizar" type="reset" value="Ver más"> -->
-                        <a class="btnCotizar" href="">Ver más</a>
-                    </div>
-                </div>
-
+      <h1>Proyectos Realizados</h1>
+      <main>
+        <div class="contenedorProyectos">
+          <div class="proyecto">
+            <img
+              class="imgProyecto"
+              src="../img/proyecto1.jpg"
+              alt="foto de ventana"
+            />
+            <div class="textoProyecto">
+              <h3>Proyecto 1</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                dignissimos voluptatibus veritatis saepe excepturi eum molestiae
+                qui consequatur omnis. Nam eaque officia repellat iste doloribus
+                beatae labore, maiores a quo.
+              </p>
+              <a class="btnCotizar" href="">Ver más</a>
             </div>
-        </main>
+          </div>
+          <div class="proyecto">
+            <img
+              class="imgProyecto"
+              src="../img/proyecto2.jpg"
+              alt="foto de persiana"
+            />
+            <div class="textoProyecto">
+              <h3>Proyecto 2</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                dignissimos voluptatibus veritatis saepe excepturi eum molestiae
+                qui consequatur omnis. Nam eaque officia repellat iste doloribus
+                beatae labore, maiores a quo.
+              </p>
+              <a class="btnCotizar" href="">Ver más</a>
+            </div>
+          </div>
+          <div class="proyecto">
+            <img
+              class="imgProyecto"
+              src="../img/proyecto3.jpg"
+              alt="foto de puerta"
+            />
+            <div class="textoProyecto">
+              <h3>Proyecto 3</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                dignissimos voluptatibus veritatis saepe excepturi eum molestiae
+                qui consequatur omnis. Nam eaque officia repellat iste doloribus
+                beatae labore, maiores a quo.
+              </p>
+
+              <!-- <input class="btnCotizar" type="reset" value="Ver más"> -->
+              <a class="btnCotizar" href="">Ver más</a>
+            </div>
+          </div>
+        </div>
+      </main>
     </main>
 
-
-
     <footer>
-        <ul>
-            <li><a class="links" href="https://www.instagram.com/">Instagram</a></li>
-            <li><a class="links" href="https://twitter.com/">X</a></li>
-            <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
-            <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
-        </ul>
-        <h3> © Cycwin 2023 - todos los derechos reservados</h3>
+      <ul>
+        <li>
+          <a class="links" href="https://www.instagram.com/">Instagram</a>
+        </li>
+        <li><a class="links" href="https://twitter.com/">X</a></li>
+        <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
+        <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
+      </ul>
+      <h3>© Cycwin 2023 - todos los derechos reservados</h3>
     </footer>
-</body>
-
+  </body>
 </html>
