--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Cycwin</title>
 </head>
 
 <body>
     <header>
         <a href="">
-            <img class="logo" src="img/logo_blanco.png" alt="logo">
+            <img class="logo" src="img/logo_blanco.png" alt="logo" />
         </a>
         <nav>
             <ul>
@@ -27,48 +27,38 @@
     <main>
         <!-- <img class="banner" src="img/banner.png" alt="banner"> -->
         <div class="contenedorBanner">
-            <img src="img/banner.png" alt="banner">
+            <img src="img/banner.png" alt="banner" />
         </div>
 
         <div class="contenedorInicio">
             <div>
                 <h1>Bienvenido a nuestro portal</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod minima consequatur praesentium optio
-                    sequi, ad
-                    eveniet rerum quas distinctio doloribus dolor enim deleniti aspernatur odit, ab iusto voluptatibus
-                    consectetur deserunt.
-                    Quod, asperiores est iste quam quidem commodi dignissimos odio aperiam ut accusantium facilis error,
-                    nam
-                    laborum? Minima officiis molestiae totam ratione fugiat, veritatis omnis sint quibusdam suscipit
-                    quos
-                    sed
-                    sapiente.
-                    Accusamus magnam eveniet aut maiores asperiores. Reprehenderit, facilis! Optio, eum esse earum
-                    fugiat
-                    alias
-                    sed eaque, molestias tempore dolorem iusto magni architecto ullam impedit pariatur fugit, id
-                    consectetur
-                    commodi quae.
-
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+                    minima consequatur praesentium optio sequi, ad eveniet rerum quas
+                    distinctio doloribus dolor enim deleniti aspernatur odit, ab iusto
+                    voluptatibus consectetur deserunt. Quod, asperiores est iste quam
+                    quidem commodi dignissimos odio aperiam ut accusantium facilis
+                    error, nam laborum? Minima officiis molestiae totam ratione fugiat,
+                    veritatis omnis sint quibusdam suscipit quos sed sapiente. Accusamus
+                    magnam eveniet aut maiores asperiores. Reprehenderit, facilis!
+                    Optio, eum esse earum fugiat alias sed eaque, molestias tempore
+                    dolorem iusto magni architecto ullam impedit pariatur fugit, id
+                    consectetur commodi quae.
                 </p>
                 <h3>¿Qué es un termopanel?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod minima consequatur praesentium optio
-                    sequi, ad
-                    eveniet rerum quas distinctio doloribus dolor enim deleniti aspernatur odit, ab iusto voluptatibus
-                    consectetur deserunt.
-                    Quod, asperiores est iste quam quidem commodi dignissimos odio aperiam ut accusantium facilis error,
-                    nam
-                    laborum? Minima officiis molestiae totam ratione fugiat, veritatis omnis sint quibusdam suscipit
-                    quos
-                    sed
-                    sapiente.
-                    Accusamus magnam eveniet aut maiores asperiores. Reprehenderit, facilis! Optio, eum esse earum
-                    fugiat
-                    alias
-                    sed eaque, molestias tempore dolorem iusto magni architecto ullam impedit pariatur fugit, id
-                    consectetur
-                    commodi quae.
-
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+                    minima consequatur praesentium optio sequi, ad eveniet rerum quas
+                    distinctio doloribus dolor enim deleniti aspernatur odit, ab iusto
+                    voluptatibus consectetur deserunt. Quod, asperiores est iste quam
+                    quidem commodi dignissimos odio aperiam ut accusantium facilis
+                    error, nam laborum? Minima officiis molestiae totam ratione fugiat,
+                    veritatis omnis sint quibusdam suscipit quos sed sapiente. Accusamus
+                    magnam eveniet aut maiores asperiores. Reprehenderit, facilis!
+                    Optio, eum esse earum fugiat alias sed eaque, molestias tempore
+                    dolorem iusto magni architecto ullam impedit pariatur fugit, id
+                    consectetur commodi quae.
                 </p>
             </div>
             <div>
@@ -82,19 +72,21 @@
 
     <div>
         <a href="html/contacto.html">
-            <img src="img/email.png" class="contacto" alt="contacto">
+            <img src="img/email.png" class="contacto" alt="contacto" />
         </a>
     </div>
 
     <footer>
         <ul>
-            <li><a class="links" href="https://www.instagram.com/">Instagram</a></li>
+            <li>
+                <a class="links" href="https://www.instagram.com/">Instagram</a>
+            </li>
             <li><a class="links" href="https://twitter.com/">X</a></li>
             <li><a class="links" href="https://web.whatsapp.com/">Whatsapp</a></li>
             <li><a class="links" href="https://www.youtube.com/">Youtube</a></li>
         </ul>
 
-        <h3> © Cycwin 2023 - todos los derechos reservados</h3>
+        <h3>© Cycwin 2023 - todos los derechos reservados</h3>
     </footer>
 </body>
 
