--- a/html/empresa.html
+++ b/html/empresa.html
@@ -87,7 +87,7 @@
         <h2>¿Dónde nos ubicamos?</h2>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11411.323197002108!2d-71.59400381177026!3d-33.61634077550398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1691189268270!5m2!1ses!2scl"
-            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+            width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
