correccion de lorem impum y entrega de tercera preentrega

--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -44,40 +44,37 @@
     <main>
       <div class="contenedorProyectos">
         <div class="proyecto">
-          <img class="imgProyecto" src="../img/proyecto1.jpg" alt="foto de ventana" />
+          <img class="imgProyecto" src="../img/proyecto1.jpg" alt="foto casa en la playa" />
           <div class="textoProyecto">
             <h3>Proyecto 1</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              dignissimos voluptatibus veritatis saepe excepturi eum molestiae
-              qui consequatur omnis. Nam eaque officia repellat iste doloribus
-              beatae labore, maiores a quo.
+              Nuestro proyecto junto al mar es un oasis de tranquilidad y belleza. Esta casa se ha diseñado para
+              capturar las vistas panorámicas del océano, incorporando elementos naturales y materiales resistentes al
+              entorno marino.
             </p>
             <a class="btnVerMas" href="">Ver más</a>
           </div>
         </div>
         <div class="proyecto">
-          <img class="imgProyecto" src="../img/proyecto2.jpeg" alt="foto de persiana" />
+          <img class="imgProyecto" src="../img/proyecto2.jpeg" alt="foto escalera con cubierta de vidrio" />
           <div class="textoProyecto">
             <h3>Proyecto 2</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              dignissimos voluptatibus veritatis saepe excepturi eum molestiae
-              qui consequatur omnis. Nam eaque officia repellat iste doloribus
-              beatae labore, maiores a quo.
+              Esta escalera, que incorpora un techo de vidrio, permite la entrada de luz natural, creando una sensación
+              de amplitud y luminosidad en el espacio. El vidrio utilizado es seguro y resistente, proporcionando
+              seguridad sin sacrificar la estética.
             </p>
             <a class="btnVerMas" href="">Ver más</a>
           </div>
         </div>
         <div class="proyecto">
-          <img class="imgProyecto" src="../img/proyecto3.jpg" alt="foto de puerta" />
+          <img class="imgProyecto" src="../img/proyecto3.jpg" alt="ventanas de vidrio con vista al mar" />
           <div class="textoProyecto">
             <h3>Proyecto 3</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-              dignissimos voluptatibus veritatis saepe excepturi eum molestiae
-              qui consequatur omnis. Nam eaque officia repellat iste doloribus
-              beatae labore, maiores a quo.
+              Nuestro proyecto de ventanas de vidrio con vista al mar es un tributo a la belleza natural. Diseñado para
+              capturar la majestuosidad del océano, estas ventanas ofrecen panorámicas impresionantes que se convierten
+              en obras de arte en sí mismas.
             </p>
             <a class="btnVerMas" href="">Ver más</a>
           </div>
