cambio pagina de error

--- a/html/error.html
+++ b/html/error.html
@@ -37,7 +37,7 @@
 
             <div>
                 <h1>Página no encontrada</h1>
-                <h3>Parece que estás perdido</h3>
+                <h3>Aquí no hay nada de nada</h3>
                 <a href="../index.html">Volver al home</a>
             </div>
         </div>
